fix: various cleanup